--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL="postgresql://postgres:w3bV6tT5dOq2JbR2@moderately-poetic-jaguarundi.data-1.use1.tembo.io:5432/postgres"
+SECRET_KEY="django-insecure-b+t4%5xu3=^t58=wtgphka)!3$cujiw%p86u=s_zs4r0ogl2@r"
