updated cloud upload

--- a/.env
+++ b/.env
@@ -1,2 +1,12 @@
+# database conf.
 DATABASE_URL="postgresql://postgres:w3bV6tT5dOq2JbR2@moderately-poetic-jaguarundi.data-1.use1.tembo.io:5432/postgres"
+
+
+# Django secret key
 SECRET_KEY="django-insecure-b+t4%5xu3=^t58=wtgphka)!3$cujiw%p86u=s_zs4r0ogl2@r"
+
+
+# cloudinary details
+CLOUD_NAME="di6jizq9j"
+API_KEY="349613792636176"
+API_SECRET="hHMzI6BqGBls65iuEQjDb8mNzfM"
